Document \fx*name

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -521,13 +521,13 @@
 % currently equivalent.\par If you want a finer grain on the
 % language-dependent parts of \fixme, the following macros are provided and
 % can be redefined.\par
-% \DescribeMacro{\fxnoteprefix}
-% \DescribeMacro{\fxwarningprefix}
-% \DescribeMacro{\fxerrorprefix}
-% \DescribeMacro{\fxfatalprefix}
+% \DescribeMacro{\fxnotename}
+% \DescribeMacro{\fxwarningname}
+% \DescribeMacro{\fxerrorname}
+% \DescribeMacro{\fxfatalname}
 % \DescribeMacro{\fixmelogo}
-% The \cs{fx*prefix} macros define the prefix for the four different note
-% levels. They make intensive use of the macro \cs{fixmelogo} ;-)\par
+% The \cs{fx*name} macros define the name of the four different note levels.
+% They make intensive use of the macro \cs{fixmelogo} ;-)\par
 % \DescribeMacro{\fixmeindexname}
 % \DescribeMacro{\fxnoteindexname}
 % \DescribeMacro{\fxwarningindexname}
